# lms

./: .clang-tidy  CMakeLists.txt  Dockerfile-build-alpine  Dockerfile-build-arch  Dockerfile-release  INSTALL.md  README.md  SUBSONIC.md
.github/workflows/: build-freebsd-basic.yml  build-macos-basic.yml
approot/: artist.xml  artists.xml  explore.xml  main.xml  mediaplayer.xml  messages.xml  messages_es.xml  messages_fr.xml  messages_it.xml  messages_pl.xml  messages_zh.xml  playqueue.xml  release.xml  releases.xml  settings-subsonic.xml  tracklist.xml  tracks.xml
conf/: lms.conf
src/libs/audio/: CMakeLists.txt
src/libs/audio/impl/: AudioFileInfoParser.cpp  AudioOutput.cpp  AudioTypes.cpp  PcmTypes.cpp
src/libs/audio/impl/alsa/: AudioOutputStream.cpp  AudioOutputStream.hpp
src/libs/audio/impl/ffmpeg/: AudioFile.cpp  AudioFile.hpp  AudioFileInfo.cpp  AudioFileInfo.hpp  AudioFileInfoParser.cpp  AudioFileInfoParser.hpp  Exception.hpp  FFmpegTypes.hpp  ImageReader.cpp  PcmDecoder.cpp  PcmDecoder.hpp  TagReader.cpp  TagReader.hpp  Transcoder.cpp  Transcoder.hpp  Utils.cpp
src/libs/audio/impl/pulseaudio/: AudioOutput.cpp  AudioOutput.hpp  AudioOutputStream.cpp  AudioOutputStream.hpp  Exception.cpp  Exception.hpp  MainLoopScopedLock.cpp  MainLoopScopedLock.hpp
src/libs/audio/impl/taglib/: AudioFileInfo.cpp  AudioFileInfo.hpp  AudioFileInfoParser.cpp  AudioFileInfoParser.hpp  ImageReader.cpp  Utils.cpp  Utils.hpp
src/libs/audio/impl/utils/: PcmDecodeStreamer.cpp  PcmDecodeStreamer.hpp
src/libs/audio/include/audio/: AudioProperties.hpp  AudioTypes.hpp  Exception.hpp  IAudioFileInfo.hpp  IAudioFileInfoParser.hpp  IAudioOutput.hpp  IImageReader.hpp  IPcmDecoder.hpp  PcmTypes.hpp  TranscodeTypes.hpp
src/libs/audio/include/audio/utils/: IPcmDecodeStreamer.hpp
src/libs/core/: CMakeLists.txt
src/libs/core/impl/: Logger.cpp  MimeTypes.cpp  String.cpp
src/libs/core/test/: EnumSet.cpp
src/libs/database/: CMakeLists.txt
src/libs/database/impl/: Migration.cpp  Session.cpp  Utils.hpp
src/libs/database/test/: Artist.cpp  CMakeLists.txt  Cluster.cpp  DatabaseTest.cpp  Listen.cpp  Migration.cpp  Release.cpp  ReleaseArtistLink.cpp  Track.cpp  TrackEmbeddedImage.cpp
src/libs/math/test/: MedoidCalculator.cpp
src/libs/services/podcast/: CMakeLists.txt
src/libs/services/recommendation/: CMakeLists.txt
src/libs/services/scanner/: CMakeLists.txt
src/libs/subsonic/: CMakeLists.txt
src/libs/subsonic/impl/: RequestContext.cpp  RequestContext.hpp  SubsonicResource.cpp  SubsonicResource.hpp
src/libs/subsonic/test/: ClientInfo.cpp  SubsonicResponse.cpp  TranscodeDecision.cpp
src/lms/: CMakeLists.txt  main.cpp
src/lms/ui/: LmsApplication.cpp  LmsApplication.hpp  MediaPlayer.cpp  MediaPlayer.hpp  PlayQueue.cpp  SettingsView.cpp  State.cpp  State.hpp  Utils.cpp  Utils.hpp
src/lms/ui/admin/: ScannerController.cpp
src/lms/ui/common/: PathRouter.cpp  PathRouter.hpp
src/lms/ui/explore/: ArtistCollector.cpp  ArtistCollector.hpp  ArtistListHelpers.hpp  ArtistType.cpp  ArtistType.hpp  ArtistTypeSelector.hpp  ArtistView.cpp  (+14 more)
src/tools/: CMakeLists.txt
src/tools/audiodecode/: CMakeLists.txt  LmsAudioDecode.cpp
src/tools/audioinfo/: LmsAudioInfo.cpp
src/tools/audioplay/: CMakeLists.txt  LmsAudioPlay.cpp
src/tools/db-generator/: LmsDbGenerator.cpp
src/tools/recommendation/: LmsRecommendation.cpp
(+153 files in other folders)
